prepared reproducibility submission

--- a/src/database.ini
+++ b/src/database.ini
@@ -1,5 +1,10 @@
-[postgresql]
-port=5433
+[pgml]
+port=5432
 host=127.0.0.1
 database=pgml_development
+user=postgres
+[madlib]
+port=5433
+host=127.0.0.1
+database=madlib_development
 user=postgres
